WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307109
[grid-lanes] Fix masonry track sizing to properly handle subgrid children's intrinsic contributions
https://bugs.webkit.org/show_bug.cgi?id=307109
Summary
[grid-lanes] Fix masonry track sizing to properly handle subgrid children's ...
Brandon
Reported
2026-02-05 14:52:03 PST
Rewrite computeDefiniteAndIndefiniteItemsForMasonry() to use the same stack-based traversal as aggregateGridItemsForIntrinsicSizing(), so that subgrid children's contributions flow through to the correct parent tracks. The previous GridIterator-based approach did not walk into subgrids, causing their children's intrinsic sizes to be ignored during masonry track sizing.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-05 14:52:11 PST
<
rdar://problem/169743714
>
Brandon
Comment 2
2026-02-05 14:53:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58000
EWS
Comment 3
2026-02-11 09:18:28 PST
Committed
307260@main
(f435986450ce): <
https://commits.webkit.org/307260@main
> Reviewed commits have been landed. Closing PR #58000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug