Cherry-pick f435986450ce. rdar://170182103

[grid-lanes] Fix masonry track sizing to properly handle subgrid children's intrinsic contributions
    https://bugs.webkit.org/show_bug.cgi?id=307109
    rdar://problem/169743714

    Reviewed by Sammy Gill.

    The previous GridIterator-based approach in
    computeDefiniteAndIndefiniteItemsForMasonry() did not walk into subgrids,
    causing their children's intrinsic sizes to be ignored during masonry track
    sizing. For example, a masonry grid with `auto min-content max-content`
    columns and a subgrid spanning columns 2–3 would fail to propagate the
    subgrid children's widths into the parent tracks.

    Fix this by adopting the same stack-based depth-first traversal used by
    aggregateGridItemsForIntrinsicSizing(), which correctly recurses into
    subgrids while accumulating margin/border/padding contributions along
    the way.

    Factor the shared traversal logic into a new template helper,
    forEachGridItemForIntrinsicSizing(), so both functions use the same
    code path for subgrid handling. This eliminates ~30 lines of duplication
    and ensures future traversal changes only need to happen in one place.

    * LayoutTests/TestExpectations:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-expected.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-ref.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing.html:
    * Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
    (WebCore::GridTrackSizingAlgorithm::traverseSubgridTreeForIntrinsicSizing):
    (WebCore::GridTrackSizingAlgorithm::aggregateGridItemsForIntrinsicSizing):
    (WebCore::GridTrackSizingAlgorithm::computeDefiniteAndIndefiniteItemsForMasonry):
    (WebCore::GridTrackSizingAlgorithm::shouldExcludeGridItemForMasonryTrackSizing const): Deleted.
    * Source/WebCore/rendering/GridTrackSizingAlgorithm.h:

    Canonical link: https://commits.webkit.org/307260@main

Attempt to fix build

* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::aggregateGridItemsForIntrinsicSizing):
* Source/WebCore/rendering/GridTrackSizingAlgorithm.h:

(cherry picked from commit 1b45110209d8ae91bb3136877cba345c53249716)

Canonical link: https://commits.webkit.org/305413.362@safari-7624-branch